Fixed role alignment

--- a/src/app/components/hris/employees/employee-profile/employee-profile.component.css
+++ b/src/app/components/hris/employees/employee-profile/employee-profile.component.css
@@ -10,6 +10,7 @@
     font-weight: 400;
     line-height: 20px;
     letter-spacing: 0.25px;
+    padding-left: 15px;
 }
 
 #header-based {
